- soap_transport_http: replace regex function calls (ereg, eregi, split) with PCRE calls (preg_match, preg_split) (thanks Pier-Luc Duchaine)
- soap_transport_http: remove call to deprecated function set_magic_quotes_runtime
- nusoap_server: replace regex function calls (ereg, eregi, split) with PCRE calls (preg_match, preg_split) (thanks Pier-Luc Duchaine)
- nusoap_server: check that value is an object before calling get_class (thanks Pier-Luc Duchaine)
- nusoap_parser: replace regex function calls (ereg, eregi, split) with PCRE calls (preg_match, preg_split) (thanks Pier-Luc Duchaine)
- nusoap_client: replace regex function calls (ereg, eregi, split) with PCRE calls (preg_match, preg_split) (thanks Pier-Luc Duchaine)
- nusoap_client: do not assign the return value of new by reference (it is deprecated) (thanks Pier-Luc Duchaine)
- nusoap_base: replace regex function calls (ereg, eregi, split) with PCRE calls (preg_match, preg_split) (thanks Pier-Luc Duchaine)
- nusoapmime: do not assign the return value of new by reference (it is deprecated)

2010-04-27, version 0.9.6
- soap_transport_http: fix proxy connection (the port was wrong) (thanks Marcel Berteler)
- soap_transport_http: support authentication type 'any' using cURL (thanks Vojko Drev)
- nusoap_client: support authentication type 'any' using cURL (thanks Vojko Drev)
- wsdl: support authentication type 'any' using cURL (thanks Vojko Drev)
- nusoap_server: add TODO regarding ReflectionClass
- nusoap_base: bump version, add TODO regarding gmtime

2010-04-28, version 0.9.6
- nusoap_base (timestamp_to_iso8601): use gmdate for UTC
- nusoap_xmlschema: ensure element ref attribute always includes namespace
- soap_transport_http: if HTTP status is 403 and Content-Type is text/xml, try processing as SOAP Fault (for Amazon)

2010-05-26, version 0.9.6
- nusoap_parser: inject encoding from HTTP into XML declaration if not already specified