@@ -205,7 +205,7 @@ class nusoap_client extends nusoap_base  {
 				$payload = $params;
 			} elseif (is_array($params)) {
 				$this->debug("serializing param array for WSDL operation $operation");
-				$payload = $this->wsdl->serializeRPCParameters($operation,'input',$params,$this->bindingType);
+				$payload = $this->wsdl->serializeRPCParameters($operation,'input',$params,$this->bindingType,$this->portName);
 			} else {
 				$this->debug('params must be array or string');
 				$this->setError('params must be array or string');
