@@ -620,10 +620,11 @@ class wsdl extends nusoap_base {
 	 * 
 	 * @param string $operation name of operation
 	 * @param string $bindingType type of binding eg: soap, soap12
+	 * @param string $portName WSDL port name
 	 * @return array 
 	 * @access public 
 	 */
-	function getOperationData($operation, $bindingType = 'soap')
+	function getOperationData($operation, $bindingType = 'soap', $portName = '')
 	{
 		if ($bindingType == 'soap') {
 			$bindingType = 'http://schemas.xmlsoap.org/wsdl/soap/';
@@ -632,6 +633,7 @@ class wsdl extends nusoap_base {
 		}
 		// loop thru ports
 		foreach($this->ports as $port => $portData) {
+		  if ($portName == '' || $port == $portName) {
 			// binding type of port matches parameter
 			if ($portData['bindingType'] == $bindingType) {
 				// get binding
@@ -644,6 +646,7 @@ class wsdl extends nusoap_base {
 					} 
 				} 
 			}
+		  }
 		} 
 	}
 	
@@ -652,10 +655,11 @@ class wsdl extends nusoap_base {
 	 * 
 	 * @param string $soapAction soapAction for operation
 	 * @param string $bindingType type of binding eg: soap, soap12
+	 * @param string $portName WSDL port name
 	 * @return array 
 	 * @access public 
 	 */
-	function getOperationDataForSoapAction($soapAction, $bindingType = 'soap') {
+	function getOperationDataForSoapAction($soapAction, $bindingType = 'soap', $portName = '') {
 		if ($bindingType == 'soap') {
 			$bindingType = 'http://schemas.xmlsoap.org/wsdl/soap/';
 		} elseif ($bindingType == 'soap12') {
@@ -663,6 +667,7 @@ class wsdl extends nusoap_base {
 		}
 		// loop thru ports
 		foreach($this->ports as $port => $portData) {
+		  if ($portName == '' || $port == $portName) {
 			// binding type of port matches parameter
 			if ($portData['bindingType'] == $bindingType) {
 				// loop through operations for the binding
@@ -672,6 +677,7 @@ class wsdl extends nusoap_base {
 					} 
 				} 
 			}
+		  }
 		} 
 	}
 	
@@ -1106,11 +1112,12 @@ class wsdl extends nusoap_base {
 	 * @param string $direction (input|output)
 	 * @param mixed $parameters parameter value(s)
 	 * @param string $bindingType (soap|soap12)
+	 * @param string $portName the WSDL port name
 	 * @return mixed parameters serialized as XML or false on error (e.g. operation not found)
 	 * @access public
 	 */
-	function serializeRPCParameters($operation, $direction, $parameters, $bindingType = 'soap') {
-		$this->debug("in serializeRPCParameters: operation=$operation, direction=$direction, XMLSchemaVersion=$this->XMLSchemaVersion, bindingType=$bindingType");
+	function serializeRPCParameters($operation, $direction, $parameters, $bindingType = 'soap', $portName = '') {
+		$this->debug("in serializeRPCParameters: operation=$operation, direction=$direction, XMLSchemaVersion=$this->XMLSchemaVersion, bindingType=$bindingType, portName=$portName");
 		$this->appendDebug('parameters=' . $this->varDump($parameters));
 		
 		if ($direction != 'input' && $direction != 'output') {
@@ -1118,9 +1125,9 @@ class wsdl extends nusoap_base {
 			$this->setError('The value of the \$direction argument needs to be either "input" or "output"');
 			return false;
 		} 
-		if (!$opData = $this->getOperationData($operation, $bindingType)) {
-			$this->debug('Unable to retrieve WSDL data for operation: ' . $operation . ' bindingType: ' . $bindingType);
-			$this->setError('Unable to retrieve WSDL data for operation: ' . $operation . ' bindingType: ' . $bindingType);
+		if (!$opData = $this->getOperationData($operation, $bindingType, $portName)) {
+			$this->debug('Unable to retrieve WSDL data for operation: ' . $operation . ' bindingType: ' . $bindingType . ' portName: ' . $portName);
+			$this->setError('Unable to retrieve WSDL data for operation: ' . $operation . ' bindingType: ' . $bindingType . ' portName: ' . $portName);
 			return false;
 		}
 		$this->debug('in serializeRPCParameters: opData:');
@@ -1206,13 +1213,15 @@ class wsdl extends nusoap_base {
 	 * @param string $operation operation name
 	 * @param string $direction (input|output)
 	 * @param mixed $parameters parameter value(s)
+	 * @param string $bindingType (soap|soap12)
+	 * @param string $portName the WSDL port name
 	 * @return mixed parameters serialized as XML or false on error (e.g. operation not found)
 	 * @access public
 	 * @deprecated
 	 */
-	function serializeParameters($operation, $direction, $parameters)
+	function serializeParameters($operation, $direction, $parameters, $bindingType = 'soap', $portName = '')
 	{
-		$this->debug("in serializeParameters: operation=$operation, direction=$direction, XMLSchemaVersion=$this->XMLSchemaVersion"); 
+		$this->debug("in serializeParameters: operation=$operation, direction=$direction, XMLSchemaVersion=$this->XMLSchemaVersion, bindingType=$bindingType, portName=$portname"); 
 		$this->appendDebug('parameters=' . $this->varDump($parameters));
 		
 		if ($direction != 'input' && $direction != 'output') {
@@ -1220,9 +1229,9 @@ class wsdl extends nusoap_base {
 			$this->setError('The value of the \$direction argument needs to be either "input" or "output"');
 			return false;
 		} 
-		if (!$opData = $this->getOperationData($operation)) {
-			$this->debug('Unable to retrieve WSDL data for operation: ' . $operation);
-			$this->setError('Unable to retrieve WSDL data for operation: ' . $operation);
+		if (!$opData = $this->getOperationData($operation, $bindingType, $portName)) {
+			$this->debug('Unable to retrieve WSDL data for operation: ' . $operation . ' bindingType: ' . $bindingType . ' portName: ' . $portName);
+			$this->setError('Unable to retrieve WSDL data for operation: ' . $operation . ' bindingType: ' . $bindingType . ' portName: ' . $portName);
 			return false;
 		}
 		$this->debug('opData:');
